Fixed spacing for grid and list games.

--- a/client/app/css/all.css
+++ b/client/app/css/all.css
@@ -9269,11 +9269,11 @@ textarea.input-group-sm > .form-control, textarea.input-group-sm > .input-group-
 	margin: 7.5px -15px;
 }
 
-.navbar-nav > li > a, .navbar-nav > li > div > button  {
+/* .navbar-nav > li > a, .navbar-nav > li > div > button  {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	line-height: 20px;
-}
+} */
 
 @media ( max-width :767px) {
 	.navbar-nav .open .dropdown-menu {
